updated lines 43 and 108